# github-guide

./: 404.html  README.md  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: pages-deploy.yml
docs/: index.md
docs/git-advanced/: index.md
docs/git-basics/: basic-git-workflow.md  cloning-a-repository.md  common-git-commands.md  configuring-git.md  creating-a-branch.md  creating-a-new-commit.md  git-best-practices.md  installing-git.md  pr-merging-guidelines.md  what-is-git.md
docs/misc/: creating-a-teams-channel.md
docs/using-github/: creating-a-pull-request-template.md  creating-a-repository.md  github-access-control.md  github-roles.md  index.md
git-basics/basic-git-workflow/: index.html
git-basics/common-git-commands/: index.html
git-basics/configuring-git/: index.html
git-basics/git-best-practices/: index.html
git-basics/installing-git/: index.html
git-basics/pr-merging-guidelines/: index.html
git-basics/what-is-git/: index.html
search/: search_index.json
site/: 404.html  index.html
site/git-basics/basic-git-workflow/: index.html
site/git-basics/common-git-commands/: index.html
site/git-basics/configuring-git/: index.html
site/git-basics/git-best-practices/: index.html
site/git-basics/installing-git/: index.html
site/git-basics/pr-merging-guidelines/: index.html
site/using-github/: index.html
using-github/: index.html
using-github/creating-a-pull-request-template/: index.html
using-github/creating-a-repository/: index.html
using-github/github-access-control/: index.html
(+4 files in other folders)
