[project]
name = "github-guide"
version = "0.1.0"
description = "GitHub guide for newbies"
authors = [
    {name = "Brian Thompson",email = "brian.thompson@ssmhealth.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mkdocs (>=1.6.1,<2.0.0)",
    "mkdocs-material (>=9.6.5,<10.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
